2010-09-23  Peter Rosin  <peda@lysator.liu.se>

	msvc: don't try to export import descriptors.
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin, mingw]
	[pw32, cegcc] <cl*, exclude_expsyms>: Don't export symbols in
	import libraries related to describing what dll(s) the import
	library is importing. Fixes problem in tests/demo-make.test
	and some other tests.

2010-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix regression in command-line length computation.
	* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN): Use `env echo' rather
	than possibly-undefined func_fallback_echo, to ensure we fork
	and exec for this test.
	* NEWS: Update.
	Regression introduced in v2.2.6-39-g9c3d4d8.

2010-09-22  Gary V. Vaughan  <gary@gnu.org>

	Post-release administrivia.
	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
	numbers to 2.4.1a.
	* NEWS: Add header line for next release.

	Release 2.4.
	* libltdl/Makefile.inc (LTDL_VERSION_INFO): We've added the
	static libprefix interface, so new version-info is C+1:0:R+1.
	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
	numbers.
	* NEWS: Update version number.

	manual: web-manual index.html clashes with @node Index.
	* doc/libtool.texi (Index): Renamed to `Combined Index'.

	tests: ISO C++ forbids declaration of 'v1' with no type.
	* tests/lt_dlexit.at (lt_dlexit unloading libs): Added an
	explicit int type to declaration of 'v1' to prevent compilation
	failure with C++.

2010-09-22  Peter Rosin  <peda@lysator.liu.se>

	tests: reloadable objects do not work on MSVC, SKIP test.
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS)
	[cygwin, mingw, pw32, cegcc] <cl*, reload_cmds>: Indicate that
	reloadable objects do not work.
	* tests/duplicate_conv.at: Skip last test if reloadable
	objects do not work.
	* doc/libtool.texi (libtool script contents) <reload_cmds>:
	Document how to indicate that reloadable objects do not work.

2010-09-21  Peter Rosin  <peda@lysator.liu.se>
